--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #252122;
+		background: #4D4F53;
 		background-image: url("images/bg02.png");
 	}
 
@@ -107,7 +107,7 @@ input, select, textarea {
 	}
 
 	strong, b {
-		color: #252122;
+		color: #4D4F53;
 		font-weight: 400;
 	}
 
@@ -134,7 +134,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #252122;
+		color: #4D4F53;
 		font-weight: 700;
 	}
 
@@ -152,7 +152,7 @@ input, select, textarea {
 	}
 
 	a {
-		color: #d52349;
+		color: #8C1515;
 		text-decoration: underline;
 	}
 
@@ -1442,7 +1442,7 @@ input, select, textarea {
 
 	form label {
 		display: block;
-		color: #252122;
+		color: #4D4F53;
 		font-weight: 400;
 		margin: 0 0 0.5em 0;
 	}
@@ -1614,7 +1614,7 @@ input, select, textarea {
 		cursor: pointer;
 		border: 0;
 		border-radius: 5px;
-		background: #d52349;
+		background: #8C1515;
 		color: #fff !important;
 		font-weight: 700;
 		outline: 0;
@@ -1648,7 +1648,7 @@ input, select, textarea {
 		input[type="reset"].alt,
 		button.alt,
 		.button.alt {
-			background: #252122;
+			background: #4D4F53;
 		}
 
 			input[type="button"].alt:hover,
@@ -1828,7 +1828,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 1.3em;
-			background-color: #d52349;
+			background-color: #8C1515;
 			height: 3.5em;
 			text-align: center;
 			color: #fff;
@@ -1843,7 +1843,7 @@ input, select, textarea {
 				position: absolute;
 				bottom: 0;
 				right: -1.2em;
-				border-left: solid 1.25em #d52349;
+				border-left: solid 1.25em #8C1515;
 				border-top: solid 1.8em transparent;
 				border-bottom: solid 1.8em transparent;
 			}
@@ -2015,7 +2015,7 @@ input, select, textarea {
 		.icon.featured {
 			position: relative;
 			display: inline-block;
-			background-color: #d52349;
+			background-color: #8C1515;
 			width: 9em;
 			padding: 1.75em 0 0.75em 0;
 			border-top-left-radius: 5px;
@@ -2035,17 +2035,17 @@ input, select, textarea {
 				position: absolute;
 				bottom: -1.95em;
 				left: 0;
-				border-top: solid 2em #d52349;
+				border-top: solid 2em #8C1515;
 				border-left: solid 4.5em transparent;
 				border-right: solid 4.5em transparent;
 			}
 
 			.icon.featured.alt {
-				background-color: #252122;
+				background-color: #4D4F53;
 			}
 
 				.icon.featured.alt:after {
-					border-top-color: #252122;
+					border-top-color: #4D4F53;
 				}
 
 			.icon.featured.alt2 {
@@ -2073,7 +2073,7 @@ input, select, textarea {
 	}
 
 		#header h1 {
-			color: #252122;
+			color: #4D4F53;
 			font-weight: 900;
 			font-size: 2.5em;
 			letter-spacing: -0.035em;
@@ -2117,14 +2117,14 @@ input, select, textarea {
 				}
 
 				#nav > ul > li.current > a {
-					background: #d52349;
+					background: #8C1515;
 					color: #fff !important;
 					font-weight: 700;
 				}
 
 	.dropotron {
 		border-radius: 5px;
-		background-color: #252122;
+		background-color: #4D4F53;
 		background-color: rgba(34, 30, 31, 0.98);
 		padding: 1.25em 1.5em 1.25em 1.5em;
 		font-style: italic;
@@ -2166,7 +2166,7 @@ input, select, textarea {
 				top: -9px;
 				border-left: solid 10px transparent;
 				border-right: solid 10px transparent;
-				border-bottom: solid 10px #252122;
+				border-bottom: solid 10px #4D4F53;
 				border-bottom-color: rgba(34, 30, 31, 0.98);
 			}
 
@@ -2198,7 +2198,7 @@ input, select, textarea {
 			}
 
 			#banner header p {
-				color: #d52349;
+				color: #8C1515;
 				padding: 0;
 				font-style: normal;
 				margin: 0;
@@ -2290,7 +2290,7 @@ input, select, textarea {
 
 	#footer {
 		position: relative;
-		color: #858484;
+		color: #ffffff;
 		padding: 4em 0;
 	}
 
@@ -2849,7 +2849,7 @@ input, select, textarea {
 			}
 
 				#header h1 {
-					color: #252122;
+					color: #4D4F53;
 					font-weight: 900;
 					font-size: 1.75em;
 					letter-spacing: -0.035em;
